--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dtman.comic_collaboration">
+    android:revisionCode="1"
+    android:versionName="1.0" >
+    // ** The allowBackup is set to false because of the splash
+
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:screenOrientation="landscape"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".SplashActivity">
             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".WelcomeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".terms_conditions"
+            android:label="@string/title_activity_terms_conditions" />
+        <activity
+            android:name=".Account"
+            android:label="@string/title_activity_account" />
+        <activity
+            android:name=".Report"
+            android:label="@string/title_activity_report" />
+        <activity
+            android:name=".Help"
+            android:label="@string/title_activity_help" />
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:value="com.example.dtman.comic_collaboration.MainActivity"/>
+        <activity
+            android:name=".HowToPlay"
+            android:label="@string/title_activity_how_to_play"
+            android:parentActivityName=".WelcomeActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.dtman.comic_collaboration.HowToPlay" />
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login"
+            android:parentActivityName=".WelcomeActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.dtman.comic_collaboration.LoginActivity" />
         </activity>
     </application>
 
