--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".SplashActivity"
-            android:screenOrientation="landscape">
+            android:screenOrientation="sensorLandscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".WelcomeActivity"
-            android:screenOrientation="landscape">
+            android:screenOrientation="sensorLandscape">
 <!--            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>-->
@@ -31,31 +31,31 @@
         <activity
             android:name=".terms_conditions"
             android:label="@string/title_activity_terms_conditions"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="sensorLandscape"/>
         <activity
             android:name=".Account"
             android:label="@string/title_activity_account"
             android:value="com.example.dtman.comic_collaboration.Account"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="sensorLandscape"/>
         <activity
             android:name=".Report"
             android:label="@string/title_activity_report"
             android:value="com.example.dtman.comic_collaboration.Report"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="sensorLandscape"/>
         <activity
             android:name=".Help"
             android:label="@string/title_activity_help"
             android:value="com.example.dtman.comic_collaboration.Help"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="sensorLandscape"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:value="com.example.dtman.comic_collaboration.MainActivity"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="sensorLandscape"/>
         <activity
             android:name=".HowToPlay"
             android:label="@string/title_activity_how_to_play"
-            android:screenOrientation="landscape"
+            android:screenOrientation="sensorLandscape"
             android:parentActivityName=".WelcomeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -64,7 +64,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
-            android:screenOrientation="landscape"
+            android:screenOrientation="sensorLandscape"
             android:parentActivityName=".WelcomeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -73,7 +73,7 @@
         <!--#####################################################################################-->
         <activity
             android:name=".InGameActivity"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="sensorLandscape" >
             <!--====================================================================================
             TEST STUFF SO I CAN LOAD THE InGameActivity
             -->
