--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,59 +4,65 @@
     android:revisionCode="1"
     android:versionName="1.0" >
     // ** The allowBackup is set to false because of the splash
-
-
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:screenOrientation="landscape"
+        android:screenOrientation="sensorLandscape"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".SplashActivity"
-            android:screenOrientation="landscape">
+        <activity
+            android:name=".SplashActivity"
+            android:screenOrientation="sensorLandscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".WelcomeActivity"
-            android:screenOrientation="landscape">
-<!--            <intent-filter>
+        <activity
+            android:name=".WelcomeActivity"
+            android:screenOrientation="sensorLandscape">
+
+            <!--
+                <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
         <activity
             android:name=".terms_conditions"
             android:label="@string/title_activity_terms_conditions"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="sensorLandscape" />
+        <activity
+            android:name=".viewComic"
+            android:label="viewComic"
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".Account"
             android:label="@string/title_activity_account"
-            android:value="com.example.dtman.comic_collaboration.Account"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="sensorLandscape"
+            android:value="com.example.dtman.comic_collaboration.Account" />
         <activity
             android:name=".Report"
             android:label="@string/title_activity_report"
-            android:value="com.example.dtman.comic_collaboration.Report"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="sensorLandscape"
+            android:value="com.example.dtman.comic_collaboration.Report" />
         <activity
             android:name=".Help"
             android:label="@string/title_activity_help"
-            android:value="com.example.dtman.comic_collaboration.Help"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="sensorLandscape"
+            android:value="com.example.dtman.comic_collaboration.Help" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:value="com.example.dtman.comic_collaboration.MainActivity"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="sensorLandscape"
+            android:value="com.example.dtman.comic_collaboration.MainActivity" />
         <activity
             android:name=".HowToPlay"
             android:label="@string/title_activity_how_to_play"
-            android:screenOrientation="landscape"
-            android:parentActivityName=".WelcomeActivity">
+            android:parentActivityName=".WelcomeActivity"
+            android:screenOrientation="sensorLandscape">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.dtman.comic_collaboration.HowToPlay" />
@@ -64,33 +70,46 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
-            android:screenOrientation="landscape"
-            android:parentActivityName=".WelcomeActivity">
+            android:parentActivityName=".WelcomeActivity"
+            android:screenOrientation="sensorLandscape">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.dtman.comic_collaboration.LoginActivity" />
         </activity>
-        <!--#####################################################################################-->
+        <!-- ##################################################################################### -->
         <activity
             android:name=".InGameActivity"
-            android:screenOrientation="landscape" >
-            <!--====================================================================================
+            android:screenOrientation="sensorLandscape">
+
+            <!--
+            ====================================================================================
             TEST STUFF SO I CAN LOAD THE InGameActivity
             -->
-<!--            <intent-filter>
+            <!--
+                <intent-filter>
                 <action
                     android:name="android.intent.action.MAIN" />
                 <category
                     android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
-            <!--=================================================================================-->
+            </intent-filter>
+            -->
+            <!-- ================================================================================= -->
         </activity>
-        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-             App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <!--
+             ATTENTION: This was auto-generated to add Google Play services to your project for
+             App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
+        -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-        <!--#####################################################################################-->
+        <!-- ##################################################################################### -->
+
+        <activity
+            android:name=".joinComic"
+            android:label="joinComic"
+            android:screenOrientation="sensorLandscape">
+
+        </activity>
     </application>
 
 </manifest>
